# pfceval

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
pfceval/: README.md  __init__.py  bootstrap.py  calculator.py  data.py  evaluation.py  metrics.py  plotting.py  report.py  utils.py
templates/: base_evaluation_template.ipynb  basic_evaluation_template.ipynb  detailed_evaluation_template.ipynb
tests/: test_calculator.py  test_evaluation.py  test_forecast.py  test_full_workflow.py  test_metrics.py
