[project]
name = "pfceval"
version = "0.0.1"
description = "Probabilistic Ensemble Forecast Evaluation with Polars"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
  {name = "Harun KIVRIL", email = "harun.kivril@knmi.nl"}
]
maintainers = [
  {name = "Harun KIVRIL", email = "harun.kivril@knmi.nl"}
]

dependencies = [
  "polars",
  "matplotlib",
]

keywords = ["forecast", "probabilistic", "verification", "polars", "evaluation"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
test = [
  "properscoring",
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
