[project]
name = "pfceval"
version = "0.0.1"
description = "Probabilistic Ensemble Forecast Evaluation with Polars"
readme = "README.md"
requires-python = ">=3.10"

authors = [
  {name = "Harun KIVRIL", email = "harun.kivril@knmi.nl"}
]
maintainers = [
  {name = "Harun KIVRIL", email = "harun.kivril@knmi.nl"}
]

dependencies = [
  "polars",
  "matplotlib",
  "cartopy",
]

keywords = ["forecast", "probabilistic", "verification", "polars", "evaluation"]


[project.optional-dependencies]
test = [
  "properscoring",
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pfceval*"]
